--- a/working-group/agendas/2020-04-14.md
+++ b/working-group/agendas/2020-04-14.md
@@ -20,7 +20,7 @@
 | Alok Kumar           | Student           | Jammu, India            |
 | Nick Cuthbert        | Stitch            | Cape Town, South Africa |
 | Bram Borggreve       | Colmena           | Medellín, Colombia      |
-| _ADD YOUR NAME HERE_ | _COMPANY / ORG_   | _WHERE YOU ARE_         |
+| Ryan Walker          | UrbanCode         | Cleveland, OH, US       |
 
 ## Agenda
 
